# MultiModalPneumonia

./: .dockerignore  .gitignore  Dockerfile  MANUSCRIPT_LOG.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  streamlit_app.py
.github/workflows/: tests.yml
artifacts/evaluation/: bootstrap_attn_vs_concat.json  bootstrap_delta_ece.json  bootstrap_image_vs_xgb_stronger_lr_v3.json  bootstrap_multimodal_vitals_vs_all.json  bootstrap_multimodal_vitals_vs_image.json  bootstrap_multimodal_vs_image_stronger_lr_v3.json  bootstrap_multimodal_vs_xgb_stronger_lr_v3.json  feature_ablation_results.csv  final_publication_report.json  final_result_note.txt  final_results_table.csv  image_normal_vs_abnormal_negatives_stronger_lr_v3.json  multimodal_normal_vs_abnormal_negatives_stronger_lr_v3.json  nonED_generalization_image.json  temperature_scaling_results.json
artifacts/models/: README.md
configs/: paths.local.example.yaml
manuscript/: DIFF_VS_THESIS.md  REFERENCES_VERIFICATION.md  manuscript.md  manuscript.tex  references.bib
scripts/: bootstrap_delta_ece.py  check_prediction_behavior.py  collect_feature_ablation_results.py  evaluate_image_on_nonED.py  evaluate_normal_vs_abnormal_negatives.py  generate_gradcam_examples.py  generate_publication_report.py  generate_shap_clinical.py  generate_thesis_figures.py  plot_roc_all_models.py  regenerate_all_results.py  run_data_pipeline.sh  run_lab_pipeline.sh  temperature_scaling.py
tests/: test_bootstrap_eval.py  test_feature_engineering.py  test_model_architecture.py  test_pipeline_qc.py
(+478 files in other folders)
